finished with the descriptions

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -109,20 +109,20 @@ Table~\ref{tab:lang}.
  \hline
 Task Name & Description\\
 \hline
-AccumFactory & Accumulator Generator as described by Paul Graham \footnote{\url{http://paulgraham.com/accgensub.html}}\\
+AccumFactory & Accumulator Generator as described by Paul Graham\footnote{\url{http://paulgraham.com/accgensub.html}}\\
 Beers \\
-Dow & Detects all years (in a range) that christmas is a Sunday\\
-FlatList & Flattens a series of nested lists\\
-FuncComp & Implementation of mathematical function composition\\
-Horner & Horner's rule for polynomial evaluation\\
-Hello & A typical ``hello, world!'' program\\
+Dow & Detects all years (in a range) that christmas is a Sunday.\\
+FlatList & Flattens a series of nested lists.\\
+FuncComp & Implementation of mathematical function composition.\\
+Horner & Horner's rule for polynomial evaluation.\\
+Hello & A typical ``hello, world!'' program.\\
 Mult & Ethiopian Multiplication. A method to multiply integers using only addition, doubling and halving.\\
-MutRecursion \\
-ManBoy \\
-Power \\
-Substring \\
-Tokenizer \\
-ZigZag \\
+MutRecursion & Hofstadter Female and Male sequences\footnote{\url{http://en.wikipedia.org/wiki/Hofstadter_sequence#Hofstadter_Female_and_Male_sequences}}.\\
+ManBoy & \textit{Man or Boy} test as proposed by Don Knuth.\\
+Power & Implementation of Power sets\footnote{\url{http://en.wikipedia.org/wiki/Power_set}}.\\
+Substring & A program that count the occurrences of a substring.\\
+Tokenizer & A string tokenizing program.\\
+ZigZag & Implementation of a program that produces a zig-zag array\footnote{\url{http://rosettacode.org/wiki/Zig-zag_matrix}}.\\
 \hline
 \end{tabular}
 \end{center}
