--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -209,14 +209,16 @@ Ruby & 52 & 22 & 77 & 100 & 91 & 34 & 27 & 53 & 83 & 33 & 47 & 69 & 57 & 46 & 59
 
 Fuzzing as a technique to investigate the reliability of software
 was first proposed in an article by Miller and his colleagues~\cite{MFS90}.
+
 In that they describe how ... % XXX 
+
 Fuzzing ... \cite{TJC08}, \cite{WWGZ11}
 
 Out approach fuzzes the program with pseudo-random
 perturbations based in same cases on knowledge of
 lexical tokens.
 This can result in a large number of failures.
-An alternative approach, {\em grammar-based white box fuzzing}~\cite{Cog08},
+An alternative approach, {\em grammar-based white box fuzzing}~\cite{God08},
 takes into account the input language's grammar to fuzz the input in
 ways that are syntactically correct.
 This results in a higher rate of successful fuzzing and the location
