s/tbl:lang/tbl:langs/

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -77,7 +77,7 @@ According to the source composition,
 our language coverage ranges from 71\% to 86\% of all languages.
 The list of languages we used in our study and the
 particular implementations we used are listed in
-Table~\ref{tab:lang}.
+Table~\ref{tab:langs}.
 
 % FuzzIdentifierSubstitution', 'FuzzIntegerPerturbation', 'FuzzRandomCharacterSubstitution', 'FuzzRandomTokenSubstitution', 'FuzzSimilarSubstitution'
 \begin{description}
