still thinking about a fuzzer process activity diagram; minor edits fixes

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -130,7 +130,7 @@ Ruby 		& ruby 1.5.8 \\
 Task Name & Description\\
 \hline
 AccumFactory & Accumulator Generator as described by Paul Graham\footnote{\url{http://paulgraham.com/accgensub.html}}\\
-Beers \\
+Beers & A program that prints the ``99 bottles of beer on the wall'' song\footnote{\url{http://99-bottles-of-beer.net/}}.\\
 Dow & Detects all years (in a range) that christmas is a Sunday.\\
 FlatList & Flattens a series of nested lists.\\
 FuncComp & Implementation of mathematical function composition.\\
