--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -114,3 +114,26 @@
 	Month=dec,
 	Year="1990"
 	}
+
+@InBook	{Neu95,
+	Title="Computer Related Risks",
+	Author="Peter G. Neumann",
+	Publisher="Addison-Wesley",
+	Year="1995",
+	ISBN="0-201-55805-X",
+	Chapter="2.2.2 Other Space-Program Problems; {DO} I=1.10 bug in {M}ercury Software",
+	Pages="27"
+	}
+
+@Article{Brad89,
+	Title="Mariner {I} [once more]",
+	Author="Mark Brader",
+	Journal="The Risks Digest",
+	Volume="9",
+	Number="54",
+	Month=dec,
+	Year="1989",
+	URL="http://catless.ncl.ac.uk/Risks/9.54.html#subj1.1",
+	Note="Current August 6th, 2012"
+	}
+
