Add Florents ack

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -297,8 +297,11 @@ Fault Tolerance ... \cite{KOKR07}, \cite{LYU95}
 
 \acks
 
-STEREO
-Acknowledgments, if needed.
+We would like to thank Florents Tselai for significant
+help in the porting and implementation of the
+{\em Rosetta Code} tasks in our environment.
+
+% XXX STEREO
 
 % We recommend abbrvnat bibliography style.
 
