--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -212,26 +212,25 @@ We measure:
 \begin{table*}
 % ['c', 'cpp', 'cs', 'hs', 'java', 'js', 'php', 'pl', 'py', 'rb']
 \begin{center}
-\begin{tabular}{l c c c c c c c c c c}
- \hline
- & C & C++ & C\# & Haskell & Java & Javascript & PHP & Perl & Python & Ruby\\
+\begin{tabular}{l r r r r r r r r r r | r}
+ & C & C++ & C\# & Haskell & Java & Javascript & PHP & Perl & Python & Ruby & Total\\
 \hline
-AccumFactory & & & & & & & & & & \\
-Hello & & & & & & & & & & \\
-FlatList & & \ding{55} & \ding{55} & & \ding{55} & & & & & \\
-Power & & & \ding{55} & & & & & & & \\
-ZigZag & & & \ding{55} & & & \ding{55} & & & & \\
-FuncComp & & & & & & & & & & \\
-Substring & & & & \ding{55} & & & & & & \\
-ManBoy & & & & & & & & & & \\
-Beers & & & & & & & & & & \\
-Tokenizer & & & & \ding{55} & & & & & & \\
-Horner & & & & & & & & & & \\
-MutRecursion & & & & & & & & & & \\
-Dow & & & & & & & & & & \\
-Mult & & & & & & & & & & \\
-Total & 14 & 13 & 11 & 12 & 13 & 13 & 14 & 14 & 14 & 14 \\
+AccumFactory & 17 & 57 & 8 & 16 & 16 & 8 & 7 & 7 & 10 & 30 & 10 \\
+Hello & 7 & 8 & 7 & 1 & 6 & 1 & 1 & 1 & 7 & 1 & 10 \\
+FlatList & 118 & \ding{55} & \ding{55} & 15 & \ding{55} & 4 & 15 & 5 & 14 & 1 & 7 \\
+Power & 27 & 77 & \ding{55} & 10 & 31 & 13 & 59 & 3 & 29 & 47 & 9 \\
+ZigZag & 22 & 80 & \ding{55} & 19 & 46 & \ding{55} & 31 & 15 & 13 & 14 & 8 \\
+FuncComp & 60 & 34 & 18 & 4 & 32 & 6 & 7 & 9 & 3 & 7 & 10 \\
+Substring & 21 & 21 & 35 & \ding{55} & 10 & 1 & 3 & 9 & 1 & 1 & 9 \\
+ManBoy & 46 & 32 & 22 & 11 & 28 & 8 & 13 & 8 & 11 & 5 & 10 \\
+Beers & 14 & 12 & 28 & 6 & 21 & 9 & 14 & 20 & 13 & 12 & 10 \\
+Tokenizer & 22 & 15 & 16 & \ding{55} & 11 & 1 & 3 & 1 & 2 & 1 & 9 \\
+Horner & 21 & 20 & 15 & 3 & 22 & 3 & 8 & 10 & 6 & 3 & 10 \\
+MutRecursion & 29 & 35 & 31 & 8 & 20 & 18 & 22 & 28 & 4 & 8 & 10 \\
+Dow & 23 & 17 & 17 & 7 & 13 & 5 & 9 & 17 & 7 & 4 & 10 \\
+Mult & 31 & 53 & 61 & 14 & 40 & 25 & 32 & 23 & 41 & 25 & 10 \\
 \hline
+Total & 458 & 461 & 258 & 114 & 296 & 102 & 224 & 156 & 161 & 159 & \\
 \end{tabular}
 \end{center}
 \caption{Language Compatibility per Task.}
