--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -243,16 +243,18 @@ Total & 458 & 461 & 258 & 114 & 296 & 102 & 224 & 156 & 161 & 159 & \\
  & \multicolumn{3}{c}{IdSub (\%)} & \multicolumn{3}{c}{IntPert (\%)} & \multicolumn{3}{c}{RandCharSub (\%)} & \multicolumn{3}{c}{RandTokenSub (\%)} & \multicolumn{3}{c}{SimSub (\%)}\\
  & com & run & out & com & run & out & com & run & out & com & run & out & com & run & out\\
 \hline
-C & 16.6 & 14.0 & 10.4 & 100.0 & 52.6 & 18.6 & 7.3 & 7.3 & 6.1 & 5.4 & 5.1 & 3.4 & 20.6 & 16.6 & 9.6 \\
-C++ & 5.6 & 4.9 & 3.9 & 91.7 & 47.2 & 6.2 & 3.7 & 3.7 & 3.4 & 2.6 & 2.4 & 1.3 & 8.3 & 7.1 & 3.1 \\
-C\# & 6.9 & 6.9 & 6.6 & 69.8 & 65.2 & 11.9 & 4.0 & 4.0 & 3.9 & 3.0 & 3.0 & 2.7 & 7.7 & 7.4 & 6.0 \\
-Haskell & 4.0 & 1.9 & 0.4 & 89.4 & 84.0 & 10.3 & 3.7 & 3.4 & 2.3 & 3.5 & 3.2 & 1.8 & 13.4 & 11.2 & 2.1 \\
-Java & 5.1 & 3.6 & 2.9 & 100.0 & 82.5 & 20.3 & 3.1 & 3.0 & 2.9 & 2.3 & 1.9 & 1.7 & 7.9 & 6.4 & 3.1 \\
-Javascript & 65.9 & 18.4 & 5.7 & 100.0 & 79.7 & 6.0 & 30.9 & 9.6 & 7.9 & 15.0 & 5.7 & 1.9 & 57.2 & 22.9 & 5.1 \\
-PHP & 56.4 & 34.1 & 3.0 & 99.2 & 87.5 & 16.2 & 37.4 & 32.7 & 1.9 & 25.7 & 23.7 & 1.1 & 46.2 & 39.7 & 1.4 \\
-Perl & 57.9 & 29.3 & 7.4 & 100.0 & 91.0 & 22.1 & 15.1 & 11.6 & 6.7 & 18.2 & 14.2 & 4.9 & 44.3 & 27.3 & 10.5 \\
-Python & 43.3 & 17.3 & 12.6 & 100.0 & 75.3 & 14.4 & 18.3 & 6.9 & 6.1 & 20.7 & 10.6 & 5.7 & 45.2 & 23.6 & 10.0 \\
-Ruby & 52.3 & 11.8 & 9.1 & 100.0 & 91.1 & 31.6 & 27.6 & 14.7 & 12.3 & 33.4 & 15.8 & 11.1 & 58.0 & 27.0 & 16.1 \\
+C & 16.6 & 14.0 & 10.4  & 100.0 & 52.6 & 18.6  & 7.3 & 7.3 & 6.1  & 5.4 & 5.1 & 3.4  & 20.6 & 16.6 & 9.6 \\
+C++ & 5.6 & 4.9 & 3.9  & 91.7 & 47.2 & 6.2  & 3.7 & 3.7 & 3.4  & 2.6 & 2.4 & 1.3  & 8.3 & 7.1 & 3.1 \\
+C\# & 6.9 & 6.9 & 6.6  & 69.8 & 65.2 & 11.9  & 4.0 & 4.0 & 3.9  & 3.0 & 3.0 & 2.7  & 7.7 & 7.4 & 6.0 \\
+Haskell & 4.0 & 1.9 & 0.4  & 89.4 & 84.0 & 10.3  & 3.7 & 3.4 & 2.3  & 3.5 & 3.2 & 1.8  & 13.4 & 11.2 & 2.1 \\
+Java & 5.1 & 3.6 & 2.9  & 100.0 & 82.5 & 20.3  & 3.1 & 3.0 & 2.9  & 2.3 & 1.9 & 1.7  & 7.9 & 6.4 & 3.1 \\
+Javascript & 65.9 & 18.4 & 5.7  & 100.0 & 79.7 & 6.0  & 30.9 & 9.6 & 7.9  & 15.0 & 5.7 & 1.9  & 57.2 & 22.9 & 5.1 \\
+PHP & 56.4 & 34.1 & 3.0  & 99.2 & 87.5 & 16.2  & 37.4 & 32.7 & 1.9  & 25.7 & 23.7 & 1.1  & 46.2 & 39.7 & 1.4 \\
+Perl & 57.9 & 29.3 & 7.4  & 100.0 & 91.0 & 22.1  & 15.1 & 11.6 & 6.7  & 18.2 & 14.2 & 4.9  & 44.3 & 27.3 & 10.5 \\
+Python & 43.3 & 17.3 & 12.6  & 100.0 & 75.3 & 14.4  & 18.3 & 6.9 & 6.1  & 20.7 & 10.6 & 5.7  & 45.2 & 23.6 & 10.0 \\
+Ruby & 52.3 & 11.8 & 9.1  & 100.0 & 91.1 & 31.6  & 27.6 & 14.7 & 12.3  & 33.4 & 15.8 & 11.1  & 58.0 & 27.0 & 16.1 \\
+\hline
+Avg & \multicolumn{3}{c}{30.6} & \multicolumn{3}{c}{95.1} & \multicolumn{3}{c}{15.1} & \multicolumn{3}{c}{12.8} & \multicolumn{3}{c}{30.3} \\
 \end{tabular}
 \end{center}
 \caption{Aggregated results per language}
