--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -254,7 +254,7 @@ Perl & 57.9 & 29.3 & 7.4  & 100.0 & 91.0 & 22.1  & 15.1 & 11.6 & 6.7  & 18.2 & 1
 Python & 43.3 & 17.3 & 12.6  & 100.0 & 75.3 & 14.4  & 18.3 & 6.9 & 6.1  & 20.7 & 10.6 & 5.7  & 45.2 & 23.6 & 10.0 \\
 Ruby & 52.3 & 11.8 & 9.1  & 100.0 & 91.1 & 31.6  & 27.6 & 14.7 & 12.3  & 33.4 & 15.8 & 11.1  & 58.0 & 27.0 & 16.1 \\
 \hline
-Avg & \multicolumn{3}{c}{30.6} & \multicolumn{3}{c}{95.1} & \multicolumn{3}{c}{15.1} & \multicolumn{3}{c}{12.8} & \multicolumn{3}{c}{30.3} \\
+Averages & 30.6 & 14.0 & 6.2  & 95.1 & 74.5 & 15.8  & 15.1 & 9.7 & 5.3  & 12.8 & 8.5 & 3.5  & 30.3 & 18.7 & 6.6 \\
 \end{tabular}
 \end{center}
 \caption{Aggregated results per language}
