Make list of tasks self-contained

--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -119,6 +119,7 @@
 	Title="Computer Related Risks",
 	Author="Peter G. Neumann",
 	Publisher="Addison-Wesley",
+	Address="Reading, MA",
 	Year="1995",
 	ISBN="0-201-55805-X",
 	Chapter="2.2.2 Other Space-Program Problems; {DO} I=1.10 bug in {M}ercury Software",
@@ -137,3 +138,23 @@
 	Note="Current August 6th, 2012"
 	}
 
+@InBook	{Hof89,
+	Title="Godel, {E}scher, {B}ach: An Eternal Golden Braid",
+	Author="Douglas Hofstadter",
+	Year="1989",
+	Location="New York",
+	Publisher="Vintage Books",
+	Pages="137"
+	}
+
+@Article{Knu64,
+	Title="Man or boy?",
+	Author="Donald Knuth",
+	Journal="Algol Bulletin",
+	Volume=17,
+	Pages=7,
+	Month=jul,
+	Year=1964,
+	URL="http://archive.computerhistory.org/resources/text/algol/algol_bulletin/A17/P24.HTM",
+	Note="Current August 7th, 2012"
+	}
