adding more bibliography

--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -137,3 +137,19 @@
 	Note="Current August 6th, 2012"
 	}
 
+
+@inproceedings{GLRI09,
+	author = {Vijay Ganesh and Tim Leek and Martin Rinard},
+	title = {Taint-based directed whitebox fuzzing},
+	booktitle = {Proceedings of the 31st International Conference on Software Engineering},
+	series = {ICSE '09},
+	year = {2009},
+	isbn = {978-1-4244-3453-4},
+	pages = {474--484},
+	numpages = {11},
+	url = {http://dx.doi.org/10.1109/ICSE.2009.5070546},
+	doi = {10.1109/ICSE.2009.5070546},
+	acmid = {1555061},
+	publisher = {IEEE Computer Society},
+	address = {Washington, DC, USA},
+} 
