--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -293,13 +293,13 @@ Ruby       & 52.3 & 11.8 & 9.1  & 100.0 & 91.1 & 31.6  & 27.6 & 14.7 & 12.3 & 33
 Fuzzing as a technique to investigate the reliability of software
 was first proposed in an article by Miller and his colleagues~\cite{MFS90}.
 
-In that they describe how they tested the common collection of {\sc unix}
+In this paper they tested the common collection of {\sc unix}
 utilities in various operating systems and architectures and discrovered that
 25-33\% of these, are crashing under certain conditions. To perform these tests
 they implemented automation shell scripts and a fuzzer, a program that generated
 random character sequences according to certain specifications.
 
-Fuzzing ... \cite{TJC08}, \cite{WWGZ11}
+Since then, Fuzzing \cite{TJC08}, \cite{WWGZ11} , \cite{GLRI09}
 
 Our approach fuzzes the program with pseudo-random
 perturbations based in same cases on knowledge of
