added more related work

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -303,7 +303,9 @@ utilities in various operating systems and architectures and discrovered that
 they implemented automation shell scripts and a fuzzer, a program that generated
 random character sequences according to certain specifications.
 
-Since then, Fuzzing \cite{TJC08}, \cite{WWGZ11} , \cite{GLRI09}
+Fuzzing is used mainly to detect software security vulnerabilities and 
+improve overall reliability \cite{TJC08}. Several tools and techniques \cite{WWGZ11,GLRI09}
+have been developed, introducing concept like \textit{directed fuzz testing}.
 
 Our approach fuzzes the program with pseudo-random
 perturbations based in same cases on knowledge of
