work in progress (related work)

--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -173,3 +173,22 @@
 	URL="http://archive.computerhistory.org/resources/text/algol/algol_bulletin/A17/P24.HTM",
 	Note="Current August 7th, 2012"
 	}
+
+@inproceedings{GODE07,
+	author = {Patrice Godefroid},
+	title = {Random testing for security: blackbox vs. whitebox fuzzing},
+	booktitle = {Proceedings of the 2nd international workshop on Random testing: co-located with the 22nd IEEE/ACM International Conference on Automated Software Engineering (ASE 2007)},
+	series = {RT '07},
+	year = {2007},
+	isbn = {978-1-59593-881-7},
+	location = {Atlanta, Georgia},
+	pages = {1--1},
+	numpages = {1},
+	url = {http://doi.acm.org/10.1145/1292414.1292416},
+	doi = {10.1145/1292414.1292416},
+	acmid = {1292416},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {automatic test generation, program verification, security, software testing},
+} 
+
