adding more related work

--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -192,3 +192,20 @@
 	keywords = {automatic test generation, program verification, security, software testing},
 } 
 
+@inproceedings{GGBO07,
+	author = {Rainer Gerlich and Ralf Gerlich and Thomas Boll},
+	title = {Random testing: from the classical approach to a global view and full test automation},
+	booktitle = {Proceedings of the 2nd international workshop on Random testing: co-located with the 22nd IEEE/ACM International Conference on Automated Software Engineering (ASE 2007)},
+	series = {RT '07},
+	year = {2007},
+	isbn = {978-1-59593-881-7},
+	location = {Atlanta, Georgia},
+	pages = {30--37},
+	numpages = {8},
+	url = {http://doi.acm.org/10.1145/1292414.1292424},
+	doi = {10.1145/1292414.1292424},
+	acmid = {1292424},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {automated software test, path set coverage, random testing, test coverage},
+} 
