--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -190,7 +190,7 @@ non-trivial functionality,
 and also, as a test case, the ``Hello, world!'' task.
 The tasks we studied are listed in Table~\ref{tab:tasks}.
 
-Fuzzing types
+Fuzzing types§
 
 % FuzzIdentifierSubstitution', 'FuzzIntegerPerturbation', 'FuzzRandomCharacterSubstitution', 'FuzzRandomTokenSubstitution', 'FuzzSimilarSubstitution'
 \begin{description}
@@ -300,7 +300,11 @@ of deeper problems.
 All these approaches are based on the fact that it is practically impossible to detect all
 execution paths and all program inputs to fully test the validity and the reliability of a program.
 
-Random Testing ... \cite{HAM06}
+Random Testing \cite{HAM06} seems to be the only solution that can partially deal with this problem,
+but still it is not widely adopted outside the academic fields \cite{GGBO07}, since the techniques it 
+introduces are difficult to be applied in complex systems and achieve good code coverage.
+
+Our approach 
 
 Fault Tolerance ... \cite{KOKR07}, \cite{LYU95}
 
