--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -209,3 +209,21 @@
 	address = {New York, NY, USA},
 	keywords = {automated software test, path set coverage, random testing, test coverage},
 } 
+
+@inproceedings{RAWO06,
+	author = {Rudolf Ramler and Klaus Wolfmaier},
+	title = {Economic perspectives in test automation: balancing automated and manual testing with opportunity cost},
+	booktitle = {Proceedings of the 2006 international workshop on Automation of software test},
+	series = {AST '06},
+	year = {2006},
+	isbn = {1-59593-408-1},
+	location = {Shanghai, China},
+	pages = {85--91},
+	numpages = {7},
+	url = {http://doi.acm.org/10.1145/1138929.1138946},
+	doi = {10.1145/1138929.1138946},
+	acmid = {1138946},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {automated testing, benefits and costs of automation, manual testing, testing economics},
+} 
