--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -173,7 +173,7 @@ where the numbers increase sequentially in a zig-zag along the anti-diagonals of
 \end{tabular}
 \end{center}
 \caption{List of the selected {\em Rosseta Code} tasks.}
-\label{tab:Tasks}
+\label{tab:tasks}
 \end{table}
 
 We selected our tasks from {\em Rosetta Code} through the following process.
@@ -302,11 +302,10 @@ execution paths and all program inputs to fully test the validity and the reliab
 
 Random Testing \cite{HAM06} seems to be the only solution that can partially deal with this problem,
 but still it is not widely adopted outside the academic fields \cite{GGBO07}, since the techniques it 
-introduces are difficult to be applied in complex systems and achieve good code coverage.
+introduces are difficult to be applied in complex systems and achieve good code coverage, if so at a significant cose \cite{RAWO06}§.
 
-Our approach 
-
-Fault Tolerance ... \cite{KOKR07}, \cite{LYU95}
+Our experiment aims to exhibit the fault tolerance \cite{LYU95,KOKR07} of each language and use their features such as 
+their type systems to our advantage.
 
 \section{Conclusions} % {{{1
 \label{sec:conclusions}
