added more related work

--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -227,3 +227,12 @@
 	address = {New York, NY, USA},
 	keywords = {automated testing, benefits and costs of automation, manual testing, testing economics},
 } 
+
+@book{PIE02,
+	Publisher = {MIT Press},
+	Isbn = {0262162091},
+	Title = {Types and Programming Languages},
+	Author = {Benjamin C. Pierce},
+	Filename = {/Users/bkarak/devel/bibliography/2008/march-2008.bib},
+	Year = {2002},
+}
