removed obsolete comments

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -190,9 +190,8 @@ non-trivial functionality,
 and also, as a test case, the ``Hello, world!'' task.
 The tasks we studied are listed in Table~\ref{tab:tasks}.
 
-Fuzzing types§
+Fuzzing types
 
-% FuzzIdentifierSubstitution', 'FuzzIntegerPerturbation', 'FuzzRandomCharacterSubstitution', 'FuzzRandomTokenSubstitution', 'FuzzSimilarSubstitution'
 \begin{description}
 	\item [IdentifierSubstitution (IdSub)]
 	\item [IntegerPerturbation (IntPert)]
