added one more publication

--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -236,3 +236,68 @@
 	Filename = {/Users/bkarak/devel/bibliography/2008/march-2008.bib},
 	Year = {2002},
 }
+
+@inproceedings{DDGM07,
+	author = {Brett Daniel and Danny Dig and Kely Garcia and Darko Marinov},
+	title = {Automated testing of refactoring engines},
+	booktitle = {Proceedings of the the 6th joint meeting of the European software engineering conference and the ACM SIGSOFT symposium on The foundations of software engineering},
+	series = {ESEC-FSE '07},
+	year = {2007},
+	isbn = {978-1-59593-811-4},
+	location = {Dubrovnik, Croatia},
+	pages = {185--194},
+	numpages = {10},
+	url = {http://doi.acm.org/10.1145/1287624.1287651},
+	doi = {10.1145/1287624.1287651},
+	acmid = {1287651},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {automated testing, bounded-exhaustive testing, imperative generators, refactoring engines, test data generation},
+} 
+
+@book{Fow00,
+	Publisher = {Addison-Wesley},
+	Isbn = {0201485672},
+	Title = {Refactoring: Improving the Design of Existing Code},
+	Author = {Martin Fowler},
+	Filename = {/Users/bkarak/devel/bibliography/papers/full.bib},
+	Note = {With contributions by Kent Beck, John Brant, William Opdyke, and Don Roberts},
+	Year = {2000},
+	Address = {Boston, MA},
+}
+
+@inproceedings{SCHA12,
+	author = {Sch\"{a}fer, Max},
+	title = {Refactoring tools for dynamic languages},
+	booktitle = {Proceedings of the Fifth Workshop on Refactoring Tools},
+	series = {WRT '12},
+	year = {2012},
+	isbn = {978-1-4503-1500-5},
+	location = {Rapperswil, Switzerland},
+	pages = {59--62},
+	numpages = {4},
+	url = {http://doi.acm.org/10.1145/2328876.2328885},
+	doi = {10.1145/2328876.2328885},
+	acmid = {2328885},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {dynamic languages, refactoring, refactoring tools, static analysis},
+}
+
+@inproceedings{,
+	author = {Asger Feldthaus and Todd Millstein and Anders M{\o}ller and Max Sch\"{a}fer and Frank Tip},
+	title = {Tool-supported refactoring for JavaScript},
+	booktitle = {Proceedings of the 2011 ACM international conference on Object oriented programming systems languages and applications},
+	series = {OOPSLA '11},
+	year = {2011},
+	isbn = {978-1-4503-0940-0},
+	location = {Portland, Oregon, USA},
+	pages = {119--138},
+	numpages = {20},
+	url = {http://doi.acm.org/10.1145/2048066.2048078},
+	doi = {10.1145/2048066.2048078},
+	acmid = {2048078},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {JavaScript, refactoring},
+} 
